--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<li><a href="elements.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/hammonds185" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -50,12 +50,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">July 14, 2022</span>
+									<h2><a href="#">About<br />
+									ME</a></h2>
+									<p>Hi, my name is Courtney Hammonds and I am a rising Junior at<br />
+									The Ohio State University where I am working towards a B.S. in<br />
+									Computer and Information Science and minors in Communication Technology<br />
+									Musicl Theatre.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
