--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 						</ul>
 						<ul class="icons">
 							<li><a href="https://github.com/hammonds185" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/courtneyhammonds/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 					</nav>
 
