--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 									ME</a></h2>
 									<p>Hi, my name is Courtney Hammonds and I am a rising Junior at<br />
 									The Ohio State University where I am working towards a B.S. in<br />
-									Computer and Information Science and minors in Communication Technology<br />
-									Musicl Theatre.</p>
+									Computer and Information Science and minors in Communication <br />
+									Technology and Musical Theatre.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/tech_n_arts.jpg" alt="" /></a>
 								<ul class="actions special">
